# ofig

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build-setup-deb.sh  pack-resources.sh
libraries/sciter-sdk/bin.gtk/: usciter
res/: app.html
res/css/: app.css  icons.css  w3.css
src/: app.cpp  frame.h  resources.cpp
src/core/: config-data-structure.h  core.h  helpers.h  ini-editor.h  ini-parser.h  php-detector.h
tests/: php-detector-test.cpp  test_base.cpp
